# kurlyk

./: .gitignore  .gitmodules  AGENTS.md  AutoInitializer_8hpp.html  AutoInitializer_8hpp.js  AutoInitializer_8hpp_source.html  BaseWebSocketClient_8hpp.html  BaseWebSocketClient_8hpp.js  BaseWebSocketClient_8hpp_source.html  CHANGELOG.md  CMakeLists.txt  CMakeLists_old.txt  CaseInsensitiveMultimap_8hpp.html  CaseInsensitiveMultimap_8hpp.js  CaseInsensitiveMultimap_8hpp_source.html  ClientErrorCategory_8hpp.html  ClientErrorCategory_8hpp.js  ClientErrorCategory_8hpp_source.html  Cookie_8hpp.html  Cookie_8hpp.js  Cookie_8hpp_source.html  CurlErrorCategory_8hpp.html  CurlErrorCategory_8hpp.js  CurlErrorCategory_8hpp_source.html  Doxyfile  EmscriptenWebSocketClientAdapter_8hpp.html  EmscriptenWebSocketClientAdapter_8hpp.js  EmscriptenWebSocketClientAdapter_8hpp_source.html  EventQueue_8hpp.html  EventQueue_8hpp.js  EventQueue_8hpp_source.html  HttpBatchRequestHandler_8hpp.html  HttpBatchRequestHandler_8hpp.js  HttpBatchRequestHandler_8hpp_source.html  HttpClient_8hpp.html  HttpClient_8hpp.js  HttpClient_8hpp_source.html  HttpErrorCategory_8hpp.html  HttpErrorCategory_8hpp.js  HttpErrorCategory_8hpp_source.html  (+447 more)
.github/doxygen-custom/: header.html  overrides.css
.github/workflows/: build_integration_tests.yml  build_test.yml  odr_checks.yml  publish.yaml
cmake/: copy_runtime_dlls.cmake
code-blocks/example-get/: example-get.cbp  main.cpp
code-blocks/kurlyk-examples/: kurlyk-examples.cbp
code-blocks/step-1/: main.cpp  step-1.cbp
code-blocks/step-2/: main.cpp  step-2.cbp
code-blocks/step-3/: main.cpp  pch.hpp  step-3.cbp
doc/: logo-main.pdn
docs/: architecture.md  mainpage.dox
examples/: async_multi_request_example.cpp  bybit_funding_history_example.cpp  cancel_http_requests.cpp  chatgpt_request_example.cpp  delayed_request_example.cpp  http_client_future_example.cpp  http_client_proxy_example.cpp  interrupted_requests_example.cpp  nested_http_requests_example.cpp  redirect_handling_example.cpp  simple_http_request_example.cpp  threaded_request_processing_example.cpp  utility_functions_example.cpp  websocket_client_lifecycle_test.cpp  websocket_echo_example.cpp  websocket_independent_clients_example.cpp
include/: kurlyk-common.hpp  kurlyk-data-encryption.hpp  kurlyk-file-encryption.hpp  kurlyk-utility.hpp  kurlyk-utils.hpp  kurlyk.hpp
include/kurlyk/: core.hpp  http.hpp  startup.hpp  types.hpp  utils.hpp  websocket.hpp
include/kurlyk/core/: INetworkTaskManager.hpp  NetworkWorker.hpp
include/kurlyk/http/: HttpClient.hpp  HttpRequestManager.hpp  data.hpp  utils.hpp
include/kurlyk/http/HttpRequestManager/: HttpBatchRequestHandler.hpp  HttpMultiRequestHandler.hpp  HttpRateLimiter.hpp  HttpRequestContext.hpp  HttpRequestHandler.hpp
include/kurlyk/http/data/: HttpRequest.hpp  HttpResponse.hpp
include/kurlyk/startup/: AutoInitializer.hpp  runtime.hpp
include/kurlyk/types/: Cookie.hpp  ProxyConfig.hpp  enums.hpp  type_utils.hpp
include/kurlyk/utils/: CaseInsensitiveMultimap.hpp  ClientErrorCategory.hpp  CurlErrorCategory.hpp  EventQueue.hpp  HttpErrorCategory.hpp  WebSocketErrorCategory.hpp  email_utils.hpp  encoding_utils.hpp  http_parser.hpp  http_utils.hpp  path_utils.hpp  percent_encoding.hpp  print_utils.hpp  string_utils.hpp  url_utils.hpp  user_agent_utils.hpp
include/kurlyk/websocket/: WebSocketClient.hpp  WebSocketManager.hpp  data.hpp
include/kurlyk/websocket/client/: BaseWebSocketClient.hpp  SimpleWeb.hpp
include/kurlyk/websocket/client/BaseWebSocketClient/: IWebSocketClient.hpp  IWebSocketSender.hpp  WebSocketEventData.hpp  WebSocketRateLimiter.hpp
include/kurlyk/websocket/client/Emscripten/: EmscriptenWebSocketClientAdapter.hpp
include/kurlyk/websocket/client/SimpleWeb/: SimpleWebSocketClientAdapter.hpp  SimpleWebSocketWorker.hpp  SocketClient.hpp
include/kurlyk/websocket/data/: WebSocketConfig.hpp  WebSocketSendInfo.hpp
include/parts/: Enums.hpp  NetworkWorker.hpp  common.hpp  data-encryption.hpp  file-encryption.hpp  utils.hpp
include/parts/Http/: Client.hpp  RequestManager.hpp  Utils.hpp
include/parts/Http/Components/: Cookie.hpp  Request.hpp  Response.hpp
include/parts/Http/RequestManager/: MultiRequestHandler.hpp  RateLimiter.hpp  RequestContext.hpp  RequestHandler.hpp
include/parts/Utils/: CaseInsensitiveMultimap.hpp  CurlErrorCategory.hpp  EventQueue.hpp
include/parts/WebSocket/: Client.hpp  Manager.hpp
include/parts/WebSocket/Client/: BaseWebSocketClient.hpp  IWebSocketClient.hpp  IWebSocketSender.hpp  RateLimiter.hpp
include/parts/WebSocket/Client/SimpleWeb/: SocketClient.hpp  WebSocketClientAdapter.hpp  Worker.hpp
include/parts/WebSocket/Components/: Config.hpp  EventData.hpp  SendInfo.hpp
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  (+81 more)
tests/conan/profiles/: mingw.ini
tests/integration/: CMakeLists.txt  get_singletons_main.cpp  run_integration_tests.ps1
tests/odr/: CMakeLists.txt  get_autoinit_a.cpp  get_autoinit_b.cpp  get_autoinit_main.cpp  get_singletons_a.cpp  get_singletons_b.cpp  get_singletons_main.cpp  run_odr_tests.ps1
